2008-11-27  Mike Frysinger  <vapier@gentoo.org>

	* configure.in: Fix the "$enable_acct_tools_setuid" = "yes" test.

2008-11-27  Mike Frysinger  <vapier@gentoo.org>

	* NEWS, configure.in, libmisc/chkname.c: make group max length a
	configure option.  The configure behavior encoded is:
	<no option> -> default of 16 (like today);
	--with-group-name-max-length -> default of 16;
	--without-group-name-max-length -> no max length;
	--with-group-name-max-length=n > max is set to n.

2008-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: (!USE_PAM) Provide visible information indicating that
	su was denied.

2008-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* man/su.1.xml: Fix the su synopsis. username is referenced in the
	manpage, not LOGIN.
	* man/ja/login.1: Fix the path of the utmp and wtmp files.

2008-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chowntty.c: Improve the logs for fchown and fchmod
	failures.
	* libmisc/chowntty.c: Only closelog() when failure cause an exit.

2008-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, libmisc/chowntty.c: Fix a race condition that could lead to
	gaining ownership or changing mode of arbitrary files.
	* NEWS, libmisc/chowntty.c, libmisc/utmp.c: is_my_tty() moved from
	utmp.c to chowntty.c. checkutmp() now only uses an existing utmp
	entry if the pid matches and ut_line matches with the current tty.
	This fixes a possible DOS when entries can be forged in the utmp
	file.
	* libmisc/chowntty.c, src/login.c, lib/prototypes.h: Remove the
	tty argument from chown_tty. chown_tty always changes stdin and
	does not need this argument anymore.

2008-10-11  Nicolas François  <nicolas.francois@centraliens.net>

	* man/gshadow.5.xml, man/shadow.5.xml, man/passwd.5.xml,
	man/grpck.8.xml: Sorted SEE ALSO references.
	* man/gshadow.5.xml: Added reference to grpck(8) and grpconv(8).
	* man/pwck.8.xml: Added reference to grpck(8).