@@ -32,6 +32,7 @@ shadow-4.1.2.2 -> shadow-4.1.3						UNRELEASED
   * Added support for long options --add (-a), --delete (-d),
     --remove-password (-r), --restrict (-R), --administrators (-A), and
     --members (-M).
+  * Added support for usernames with arbitrary length.
 - groupadd
   * audit logging improvements.
   * Speedup (see "addition of users or groups" above).
